# earth_quake_visulizations

./: README.md  pyproject.toml
src/: Japan_Earthquake analysis.ipynb  README.md
src/Nepal_earthquake_analysis/: Nepal_EarthQuake_Analysis  custom_legends.ipynb
