[tool.poetry]
name = "earthquake"
version = "0.1.0"
description = ""
authors = ["Waqar351 <waqar_comsat@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
contextily = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
